crates/solidity/testing/snapshots/bindings_output/libraries/modifiers_scope/v2/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Equal or Semicolon.
   ╭─[input.sol:2:25]
   │
 2 │   error IndexOutOfBounds();
   │                         ─┬  
   │                          ╰── Error occurred here.
───╯
Error: Expected Equal or Semicolon.
   ╭─[input.sol:5:28]
   │
 5 │     revert IndexOutOfBounds();
   │                            ─┬  
   │                             ╰── Error occurred here.
───╯

------------------------------------------------------------------------

Definitions (4):
- Def: #1 ["Lib" @ input.sol:1:9] (library)
- Def: #2 ["IndexOutOfBounds" @ input.sol:2:9] (state var, type: unresolved)
- Def: #3 ["test" @ input.sol:4:12] (modifier)
- Def: #4 ["IndexOutOfBounds" @ input.sol:5:12] (variable, type: unresolved)

------------------------------------------------------------------------

References (2):
- Ref: ["error" @ input.sol:2:3] -> unresolved
- Ref: ["revert" @ input.sol:5:5] -> unresolved

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ library Lib {
   │         ─┬─  
   │          ╰─── name: 1
 2 │   error IndexOutOfBounds();
   │   ──┬── ────────┬───────  
   │     ╰───────────────────── unresolved
   │                 │         
   │                 ╰───────── name: 2
   │ 
 4 │   modifier test() {
   │            ──┬─  
   │              ╰─── name: 3
 5 │     revert IndexOutOfBounds();
   │     ───┬── ────────┬───────  
   │        ╰───────────────────── unresolved
   │                    │         
   │                    ╰───────── name: 4
───╯
